improve booking logic